src/App.css
.up-arrow {
  font-size: 30px;
}

.no-match {
  text-align: center;
}

.searchbar {
  position: absolute;
  max-width: 70em;
  width: 96%; /* do not use margin! translate will use the percentage after margining, so the box is wrongly shifted horizontally. use width instead.*/
  transition: all 0.5s ease-in-out;
}

.centered {
  top: 40%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.topped {
  top: 0%;
  left: 50%;
  transform: translate(-50%, 0%);  
}

.searchres {
  position: absolute;
  top: 6%;
  margin: 0px;
  max-width: 70em;
  width: 96%;
  left: 50%;
  transform: translate(-50%, 0%);  
}


@media only screen and (max-width: 600px) {
  .header {
    margin: 10px;
  }
}

